[project]
name = "acousticrestarts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "prophet>=1.3.0",
    "pydantic>=2.12.5",
    "pytorch-forecasting>=1.0.0",
    "pytorch-lightning==1.9.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "xgboost>=3.1.3",
]

